fix: Corregir errores de compilación y advertencias en código Java